Initalize the huggingface Lama LLM model

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONIg6PgM8TbxLUUYiG1/iR",
+      "authorship_tag": "ABX9TyMJ5ohemsblaHMflrACZdzh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,15 +183,43 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from langchain_community.llms import HuggingFaceHub"
+        "https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct"
       ],
       "metadata": {
-        "id": "6JQ0f3hYZ7Mi"
+        "id": "W7vK9uGBbyx2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_community.llms import HuggingFaceHub\n",
+        "\n",
+        "llm = HuggingFaceHub(\n",
+        "    repo_id=\"meta-llama/Llama-3.3-70B-Instruct\",\n",
+        "    model_kwargs={\"temperature\":0.1, \"max_length\":500},\n",
+        "    huggingfacehub_api_token=\"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\"\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6JQ0f3hYZ7Mi",
+        "outputId": "b6e42947-17ea-4c71-9afb-074a219586ee"
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-13-e5002c7e058c>:3: LangChainDeprecationWarning: The class `HuggingFaceHub` was deprecated in LangChain 0.0.21 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
+            "  llm = HuggingFaceHub(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
