Initlialize and build the ChatPromptTemplate

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ5ohemsblaHMflrACZdzh",
+      "authorship_tag": "ABX9TyN4P/Tws4yNaX0WYdLvU24K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,9 +223,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Initalize the LangchainPrompt Template"
+      ],
       "metadata": {
         "id": "XCA3e-SVaL3A"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.prompts import ChatPromptTemplate\n",
+        "\n",
+        "prompt=ChatPromptTemplate.from_messages(\n",
+        "    [\n",
+        "        (\"system\",\"You are intelligent robet. Please answere the following question\"),\n",
+        "        (\"user\", \"{question}\")\n",
+        "    ]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "34zu07cYeZ5o"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "74fBkN8qe8kZ"
       },
       "execution_count": null,
       "outputs": []
