Initalize the string output parser

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4P/Tws4yNaX0WYdLvU24K",
+      "authorship_tag": "ABX9TyMjW950nwMMLc8ehTh4BkDM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,9 +252,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Initialize the outputparser"
+      ],
       "metadata": {
         "id": "74fBkN8qe8kZ"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.output_parsers import StrOutputParser\n",
+        "\n",
+        "parser=StrOutputParser()\n"
+      ],
+      "metadata": {
+        "id": "ZCCbufSuf0cx"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PHYRBNB4gMaw"
       },
       "execution_count": null,
       "outputs": []
