Build the chain using prompt, LLM model, and output parser

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjW950nwMMLc8ehTh4BkDM",
+      "authorship_tag": "ABX9TyPujRItra05VrDnvvSt0nRB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,9 +276,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Create the chain using Prompt, LLM model and Outputparser"
+      ],
       "metadata": {
         "id": "PHYRBNB4gMaw"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chain = prompt | llm | parser"
+      ],
+      "metadata": {
+        "id": "UHaDfId0l8rg"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nuw0rD3cmDM0"
       },
       "execution_count": null,
       "outputs": []
