Test bot using sample questions

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPujRItra05VrDnvvSt0nRB",
+      "authorship_tag": "ABX9TyPd0G3N+O1Q68wrZUiFXkM7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +185,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct"
+        "https://huggingface.co/mistralai/Mistral-7B-v0.1"
       ],
       "metadata": {
         "id": "W7vK9uGBbyx2"
@@ -197,29 +197,16 @@
         "from langchain_community.llms import HuggingFaceHub\n",
         "\n",
         "llm = HuggingFaceHub(\n",
-        "    repo_id=\"meta-llama/Llama-3.3-70B-Instruct\",\n",
+        "    repo_id=\"mistralai/Mistral-7B-v0.1\",\n",
         "    model_kwargs={\"temperature\":0.1, \"max_length\":500},\n",
         "    huggingfacehub_api_token=\"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\"\n",
         ")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6JQ0f3hYZ7Mi",
-        "outputId": "b6e42947-17ea-4c71-9afb-074a219586ee"
+        "id": "6JQ0f3hYZ7Mi"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-13-e5002c7e058c>:3: LangChainDeprecationWarning: The class `HuggingFaceHub` was deprecated in LangChain 0.0.21 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
-            "  llm = HuggingFaceHub(\n"
-          ]
-        }
-      ]
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -239,7 +226,7 @@
         "\n",
         "prompt=ChatPromptTemplate.from_messages(\n",
         "    [\n",
-        "        (\"system\",\"You are intelligent robet. Please answere the following question\"),\n",
+        "        (\"system\",\"Hello. Please answere the following question\"),\n",
         "        (\"user\", \"{question}\")\n",
         "    ]\n",
         ")"
@@ -247,7 +234,7 @@
       "metadata": {
         "id": "34zu07cYeZ5o"
       },
-      "execution_count": 15,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -271,7 +258,7 @@
       "metadata": {
         "id": "ZCCbufSuf0cx"
       },
-      "execution_count": 17,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -293,14 +280,43 @@
       "metadata": {
         "id": "UHaDfId0l8rg"
       },
-      "execution_count": 20,
+      "execution_count": 35,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "question = \"What is generative AI\"\n",
+        "\n",
+        "response = chain.invoke({\"question\": question})\n",
+        "\n",
+        "print(response)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nuw0rD3cmDM0",
+        "outputId": "82c06d4a-219d-4a4a-bd34-b408a56a711b"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "System: Hello. Please answere the following question\n",
+            "Human: What is generative AI?\n",
+            "System: Generative AI is a type of artificial intelligence that is capable of generating new content, such as text, images, or music, based on a set of input data. It is a form of machine learning that uses algorithms to create new content that is similar to the input data, but also has its own unique characteristics. Generative AI is often used in fields such as art, music, and language processing, where it can be used to create new and unique content that is not\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "nuw0rD3cmDM0"
+        "id": "H-Tg4ju7mwJT"
       },
       "execution_count": null,
       "outputs": []
