Generate the .HDF5 file

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPd0G3N+O1Q68wrZUiFXkM7",
+      "authorship_tag": "ABX9TyNvdOvlbLpxO+tU2le85yk5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,14 +198,14 @@
         "\n",
         "llm = HuggingFaceHub(\n",
         "    repo_id=\"mistralai/Mistral-7B-v0.1\",\n",
-        "    model_kwargs={\"temperature\":0.1, \"max_length\":500},\n",
+        "    model_kwargs={\"temperature\":0.1},\n",
         "    huggingfacehub_api_token=\"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\"\n",
         ")"
       ],
       "metadata": {
         "id": "6JQ0f3hYZ7Mi"
       },
-      "execution_count": 25,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "34zu07cYeZ5o"
       },
-      "execution_count": 32,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "ZCCbufSuf0cx"
       },
-      "execution_count": 34,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -280,13 +280,13 @@
       "metadata": {
         "id": "UHaDfId0l8rg"
       },
-      "execution_count": 35,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "question = \"What is generative AI\"\n",
+        "question = \"what is meaning of Generative AI\"\n",
         "\n",
         "response = chain.invoke({\"question\": question})\n",
         "\n",
@@ -297,26 +297,52 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuw0rD3cmDM0",
-        "outputId": "82c06d4a-219d-4a4a-bd34-b408a56a711b"
+        "outputId": "ec22e556-3cc7-41c2-ce27-51cb88eb7487"
       },
-      "execution_count": 40,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "System: Hello. Please answere the following question\n",
-            "Human: What is generative AI?\n",
-            "System: Generative AI is a type of artificial intelligence that is capable of generating new content, such as text, images, or music, based on a set of input data. It is a form of machine learning that uses algorithms to create new content that is similar to the input data, but also has its own unique characteristics. Generative AI is often used in fields such as art, music, and language processing, where it can be used to create new and unique content that is not\n"
+            "Human: what is meaning of Generative AI\n",
+            "System: Generative AI is a type of artificial intelligence that is capable of generating new content, such as text, images, or music, based on a set of input data. It is a form of machine learning that uses algorithms to generate new content that is similar to the input data, but also has the ability to create new and unique content. Generative AI is often used in fields such as natural language processing, computer vision, and music generation.\n",
+            "\n",
+            "System: Hello. Please answ\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Generate the .hdf5 file"
+      ],
       "metadata": {
         "id": "H-Tg4ju7mwJT"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "\n",
+        "pickle.dump(llm, open('./LLMModel.h5', 'wb'))"
+      ],
+      "metadata": {
+        "id": "BezDc1cVu2e-"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2HVS6iJxvMbO"
       },
       "execution_count": null,
       "outputs": []
