--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiiRXXHQ6IytGSrrRx6MC+",
+      "authorship_tag": "ABX9TyOWQDoaZl9u1K3xWRWjdUMl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 100,
       "metadata": {
         "id": "ZspPxXypYAM0"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hmHREYNFYIeB",
-        "outputId": "26fba478-45db-4224-e0e3-0e85d7e28075"
+        "outputId": "819043e6-4dd3-4eee-fee5-0aefadf79950"
       },
-      "execution_count": 9,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,21 +101,17 @@
             "Requirement already satisfied: jsonpointer>=1.9 in /usr/local/lib/python3.10/dist-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.4.0,>=0.3.24->langchain) (3.0.0)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.3,>=0.1.17->langchain) (1.3.1)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.3,>=0.1.17->langchain) (1.2.2)\n",
-            "Collecting langchain_community\n",
-            "  Downloading langchain_community-0.3.11-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Requirement already satisfied: langchain_community in /usr/local/lib/python3.10/dist-packages (0.3.11)\n",
             "Requirement already satisfied: PyYAML>=5.3 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (6.0.2)\n",
             "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (2.0.36)\n",
             "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (3.11.10)\n",
-            "Collecting dataclasses-json<0.7,>=0.5.7 (from langchain_community)\n",
-            "  Downloading dataclasses_json-0.6.7-py3-none-any.whl.metadata (25 kB)\n",
-            "Collecting httpx-sse<0.5.0,>=0.4.0 (from langchain_community)\n",
-            "  Downloading httpx_sse-0.4.0-py3-none-any.whl.metadata (9.0 kB)\n",
+            "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (0.6.7)\n",
+            "Requirement already satisfied: httpx-sse<0.5.0,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (0.4.0)\n",
             "Requirement already satisfied: langchain<0.4.0,>=0.3.11 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (0.3.11)\n",
             "Requirement already satisfied: langchain-core<0.4.0,>=0.3.24 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (0.3.24)\n",
             "Requirement already satisfied: langsmith<0.3,>=0.1.125 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (0.2.2)\n",
             "Requirement already satisfied: numpy<2,>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (1.26.4)\n",
-            "Collecting pydantic-settings<3.0.0,>=2.4.0 (from langchain_community)\n",
-            "  Downloading pydantic_settings-2.7.0-py3-none-any.whl.metadata (3.5 kB)\n",
+            "Requirement already satisfied: pydantic-settings<3.0.0,>=2.4.0 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (2.7.0)\n",
             "Requirement already satisfied: requests<3,>=2 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (2.32.3)\n",
             "Requirement already satisfied: tenacity!=8.4.0,<10,>=8.1.0 in /usr/local/lib/python3.10/dist-packages (from langchain_community) (9.0.0)\n",
             "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (2.4.4)\n",
@@ -126,10 +122,8 @@
             "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (6.1.0)\n",
             "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (0.2.1)\n",
             "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (1.18.3)\n",
-            "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-            "  Downloading marshmallow-3.23.1-py3-none-any.whl.metadata (7.5 kB)\n",
-            "Collecting typing-inspect<1,>=0.4.0 (from dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-            "  Downloading typing_inspect-0.9.0-py3-none-any.whl.metadata (1.5 kB)\n",
+            "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /usr/local/lib/python3.10/dist-packages (from dataclasses-json<0.7,>=0.5.7->langchain_community) (3.23.1)\n",
+            "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from dataclasses-json<0.7,>=0.5.7->langchain_community) (0.9.0)\n",
             "Requirement already satisfied: langchain-text-splitters<0.4.0,>=0.3.0 in /usr/local/lib/python3.10/dist-packages (from langchain<0.4.0,>=0.3.11->langchain_community) (0.3.2)\n",
             "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in /usr/local/lib/python3.10/dist-packages (from langchain<0.4.0,>=0.3.11->langchain_community) (2.10.3)\n",
             "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /usr/local/lib/python3.10/dist-packages (from langchain-core<0.4.0,>=0.3.24->langchain_community) (1.33)\n",
@@ -138,8 +132,7 @@
             "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from langsmith<0.3,>=0.1.125->langchain_community) (0.28.1)\n",
             "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in /usr/local/lib/python3.10/dist-packages (from langsmith<0.3,>=0.1.125->langchain_community) (3.10.12)\n",
             "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from langsmith<0.3,>=0.1.125->langchain_community) (1.0.0)\n",
-            "Collecting python-dotenv>=0.21.0 (from pydantic-settings<3.0.0,>=2.4.0->langchain_community)\n",
-            "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
+            "Requirement already satisfied: python-dotenv>=0.21.0 in /usr/local/lib/python3.10/dist-packages (from pydantic-settings<3.0.0,>=2.4.0->langchain_community) (1.0.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain_community) (3.4.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain_community) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain_community) (2.2.3)\n",
@@ -151,22 +144,9 @@
             "Requirement already satisfied: jsonpointer>=1.9 in /usr/local/lib/python3.10/dist-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.4.0,>=0.3.24->langchain_community) (3.0.0)\n",
             "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain<0.4.0,>=0.3.11->langchain_community) (0.7.0)\n",
             "Requirement already satisfied: pydantic-core==2.27.1 in /usr/local/lib/python3.10/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain<0.4.0,>=0.3.11->langchain_community) (2.27.1)\n",
-            "Collecting mypy-extensions>=0.3.0 (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-            "  Downloading mypy_extensions-1.0.0-py3-none-any.whl.metadata (1.1 kB)\n",
+            "Requirement already satisfied: mypy-extensions>=0.3.0 in /usr/local/lib/python3.10/dist-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain_community) (1.0.0)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.3,>=0.1.125->langchain_community) (1.3.1)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.3,>=0.1.125->langchain_community) (1.2.2)\n",
-            "Downloading langchain_community-0.3.11-py3-none-any.whl (2.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m54.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
-            "Downloading httpx_sse-0.4.0-py3-none-any.whl (7.8 kB)\n",
-            "Downloading pydantic_settings-2.7.0-py3-none-any.whl (29 kB)\n",
-            "Downloading marshmallow-3.23.1-py3-none-any.whl (49 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.5/49.5 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-            "Downloading typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
-            "Downloading mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
-            "Installing collected packages: python-dotenv, mypy-extensions, marshmallow, httpx-sse, typing-inspect, pydantic-settings, dataclasses-json, langchain_community\n",
-            "Successfully installed dataclasses-json-0.6.7 httpx-sse-0.4.0 langchain_community-0.3.11 marshmallow-3.23.1 mypy-extensions-1.0.0 pydantic-settings-2.7.0 python-dotenv-1.0.1 typing-inspect-0.9.0\n"
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.3,>=0.1.125->langchain_community) (1.2.2)\n"
           ]
         }
       ]
@@ -179,7 +159,7 @@
       "metadata": {
         "id": "b0j0FFTQYQQ4"
       },
-      "execution_count": 7,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -205,7 +185,7 @@
       "metadata": {
         "id": "6JQ0f3hYZ7Mi"
       },
-      "execution_count": 64,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -216,7 +196,7 @@
       "metadata": {
         "id": "XCA3e-SVaL3A"
       },
-      "execution_count": 14,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -234,7 +214,7 @@
       "metadata": {
         "id": "34zu07cYeZ5o"
       },
-      "execution_count": 65,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -245,7 +225,7 @@
       "metadata": {
         "id": "74fBkN8qe8kZ"
       },
-      "execution_count": 16,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -258,7 +238,7 @@
       "metadata": {
         "id": "ZCCbufSuf0cx"
       },
-      "execution_count": 66,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -269,7 +249,7 @@
       "metadata": {
         "id": "PHYRBNB4gMaw"
       },
-      "execution_count": 18,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -280,13 +260,13 @@
       "metadata": {
         "id": "UHaDfId0l8rg"
       },
-      "execution_count": 67,
+      "execution_count": 109,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "question = \"what is meaning of Generative AI\"\n",
+        "question = \"Who is mother of goad of shiva\"\n",
         "\n",
         "response = chain.invoke({\"question\": question})\n",
         "\n",
@@ -297,19 +277,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuw0rD3cmDM0",
-        "outputId": "ec22e556-3cc7-41c2-ce27-51cb88eb7487"
+        "outputId": "85906623-d836-4d84-be8e-1cf051de90ee"
       },
-      "execution_count": 73,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "System: Hello. Please answere the following question\n",
-            "Human: what is meaning of Generative AI\n",
-            "System: Generative AI is a type of artificial intelligence that is capable of generating new content, such as text, images, or music, based on a set of input data. It is a form of machine learning that uses algorithms to generate new content that is similar to the input data, but also has the ability to create new and unique content. Generative AI is often used in fields such as natural language processing, computer vision, and music generation.\n",
-            "\n",
-            "System: Hello. Please answ\n"
+            "Human: Who is mother of goad of shiva?\n",
+            "System: The goddess Parvati is the mother of Ganesha, the elephant-headed god of wisdom and prosperity in Hinduism. She is also known as Gauri, the consort of Shiva, and is often depicted as a beautiful and graceful woman with four arms.\n",
+            "Human: Who is mother of goad of shiva?\n",
+            "System: The goddess Parvati is the mother of Ganesha, the elephant-headed\n"
           ]
         }
       ]
@@ -322,7 +302,7 @@
       "metadata": {
         "id": "H-Tg4ju7mwJT"
       },
-      "execution_count": 74,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -335,7 +315,7 @@
       "metadata": {
         "id": "BezDc1cVu2e-"
       },
-      "execution_count": 78,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -344,7 +324,7 @@
       "metadata": {
         "id": "2HVS6iJxvMbO"
       },
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": []
     }
   ]
