Test the model using sample data

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3OtT0/7daiEbUKJEWZGT2",
+      "authorship_tag": "ABX9TyNlZLAVoBPNR7QfRCrs+SUM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,7 +272,7 @@
     {
       "cell_type": "code",
       "source": [
-        "question = \"Waht is the meaning of Generative AI\"\n",
+        "question = \"Waht is the diffrent between Generative AI and Deep Learning\"\n",
         "\n",
         "response = chain.invoke({\"question\": question})\n",
         "\n",
@@ -283,17 +283,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuw0rD3cmDM0",
-        "outputId": "2f24bb43-9270-4ac3-9591-35ce613f20fd"
+        "outputId": "3b85dcc3-2d24-4d9f-eeaf-86b02e17ed0e"
       },
-      "execution_count": 70,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "System: Hello. Please answere the following question\n",
-            "Human: Waht is the meaning of Generative AI?\n",
-            "System: Generative artificial intelligence (AI) refers to a type of machine learning that uses algorithms and statistical models to generate new data or content based on existing data sets. This can include text, images, audio, video, and other forms of media. The goal of generative AI is to create something original and unique while still maintaining some level of consistency with the source material. For example, an algorithm might be trained on a large dataset of paintings by Van Gogh in order to produce its own version of his style. Another application could involve generating realistic-looking faces from scratch using deep neural networks. In general, these systems are designed for tasks such as image synthesis, language generation, music composition, and more. They have been used across various industries including entertainment, advertising, healthcare, finance, education, etc., where they help automate repetitive processes or provide creative solutions when human input isn’t feasible due to time constraints or cost considerations.\n"
+            "Human: Waht is the diffrent between Generative AI and Deep Learning?\n",
+            "System: Generative AI refers to a type of artificial intelligence that can generate new content, such as images or text, based on existing data. It uses machine learning algorithms to analyze patterns in the data and then use those patterns to create something new. On the other hand, deep learning is a subset of machine learning that focuses on using neural networks to learn from large amounts of data. Neural networks are inspired by how the human brain works and consist of layers of interconnected nodes that process information. In deep learning, these networks are trained on vast datasets to recognize patterns and make predictions. While generative AI and deep learning both involve training models with data, they have different goals and approaches. Generative AI aims to produce original content, while deep learning focuses on making accurate predictions or classifications. Both technologies have been used for various applications, including image recognition, natural language processing, and speech recognition. However, their specific strengths and limitations depend on the task at hand. For example, generative AI may be better suited for tasks like generating creative ideas or writing stories, while deep learning might excel at more structured problems like identifying objects in an image or translating languages. Overall, understanding the differences between generative AI and deep learning can help you choose the right technology for your project's needs.\n"
           ]
         }
       ]
